--- a/css/game.css
+++ b/css/game.css
@@ -2,12 +2,14 @@
                  table-layout: fixed;
                  border-spacing: 0;   }
 .background td { padding: 0;          }
-.lava          { background: rgb(255, 100, 100); }
-.wall          { background: white;   }
+.lava          { background: rgb(0, 200, 58); }
+.wall          { background: rgb(0, 63, 158);   }
 
 .actor  { position: absolute;  }
 .coin   { background: rgb(241, 229, 89); }
 .player { background: rgb(64, 64, 64); }
+.penny  { background: rgb(205, 132, 86);}
+.treasure { background: rgb(142, 115, 5);}
 
 .game {
   overflow: hidden;
