--- a/css/game.css
+++ b/css/game.css
@@ -22,5 +22,5 @@
   background: rgb(160, 64, 64);
 }
 .won .player {
-  box-shadow: -4px -7px 8px white, 4px -7px 8px white;
+  box-shadow: -4px -7px 8px red, 4px -7px 8px red;
 }
