--- a/css/game.css
+++ b/css/game.css
@@ -1,4 +1,4 @@
-.background    { background: rgb(52, 166, 251);
+.background    { background: url(https://cdn.pixabay.com/photo/2012/04/26/18/41/banana-42793_960_720.png);
                  table-layout: fixed;
                  border-spacing: 0;   }
 .background td { padding: 0;          }
